--- a/icons/list/index.html
+++ b/icons/list/index.html
@@ -21,13 +21,12 @@
 }
 
 .docs-nav {
-  background-color: var(--rvt-color-black-5);
-  border-top: var(--rvt-border);
+  background-color: var(--rvt-color-black-10);
 }
 
 .docs-nav__list {
   display: grid;
-  gap: 0.25rem;
+  gap: 0.5rem;
   grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
   list-style: none;
   margin: 0;
@@ -40,11 +39,12 @@
 }
 
 .docs-nav__item[aria-current] .docs-nav__link {
-  background-color: var(--rvt-color-black-90);
+  background-color: var(--rvt-color-blue-60);
   color: var(--rvt-color-white);
 }
 
 .docs-nav__link {
+  background-color: var(--rvt-color-black-5);
   border-radius: 0.25rem;
   color: inherit;
   display: flex;
@@ -53,7 +53,7 @@
 }
 
 .docs-nav__link:hover {
-  background-color: var(--rvt-color-black-10);
+  background-color: var(--rvt-color-white);
   color: var(--rvt-color-blue-60);
 }
 
@@ -257,7 +257,7 @@ if ('clipboard' in navigator) {
 
       </div>
     </div>
-    <div class="docs-nav rvt-p-tb-md">
+    <div class="docs-nav rvt-border-top rvt-p-tb-md">
       <nav class="rvt-container-xl" aria-label="Icons">
   <h2 class="rvt-sr-only">Icons</h2>
   <ul class="docs-nav__list">
