--- a/icons/image/index.html
+++ b/icons/image/index.html
@@ -7,27 +7,25 @@
   <title>image | Rivet Icons</title>
   <link rel="stylesheet" href="https://unpkg.com/rivet-core@2.0.0-alpha.4/css/rivet.min.css">
   <style>:root {
-  --rvt-border: calc(1rem/16) solid var(--rvt-color-black-10);
+  --rvt-border: calc(1rem/16) solid var(--rvt-color-black-20);
   --rvt-color-black: #333333;
   --rvt-color-black-5: #fafafa;
   --rvt-color-black-10: #eeeeee;
+  --rvt-color-black-20: #dddddd;
   --rvt-color-black-90: #444444;
   --rvt-color-blue-60: #006298;
   --rvt-color-white: #ffffff;
 }
 
-.docs-content {
-  max-width: 40rem;
-}
-
 .docs-nav {
   background-color: var(--rvt-color-black-10);
+  border-top: var(--rvt-border);
 }
 
 .docs-nav__list {
   display: grid;
   gap: 0.5rem;
-  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
   list-style: none;
   margin: 0;
   padding: 0;
@@ -57,30 +55,35 @@
   color: var(--rvt-color-blue-60);
 }
 
-.docs-code-block {
-  background-color: var(--rvt-color-black-5);
+.docs-examples {
+  max-width: calc(50rem - calc(2rem/16));
+}
+
+.docs-example {
   border: var(--rvt-border);
   border-radius: 0.25rem;
+  margin-top: 1rem;
+}
+
+.docs-example__preview {
+  display: flex;
+  padding: 1rem;
+}
+
+.docs-example__code {
+  background-color: var(--rvt-color-black-5);
+  border-top: var(--rvt-border);
+  border-radius: 0 0 0.25rem 0.25rem;
   margin: 0;
 }
 
-.docs-code-block > code {
+.docs-example__code > code {
   color: inherit;
   display: block;
   font-family: Consolas,Monaco,"Andale Mono","Ubuntu Mono",monospace;
   font-size: 1rem;
   overflow-x: auto;
   padding: 1rem;
-}
-
-.docs-sample-colored {
-  color: var(--rvt-color-blue-60);
-}
-
-.docs-sample-dark {
-  border-color: var(--rvt-color-black);
-  background-color: var(--rvt-color-black-90);
-  color: var(--rvt-color-white);
 }
 
 .docs-copy {
@@ -95,7 +98,7 @@
   margin-left: 0.5rem;
   padding: 0 0.5rem;
   position: absolute;
-  top: 1.5rem;
+  top: 0.5rem;
   user-select: none;
 }
 </style>
@@ -205,27 +208,64 @@ window.customElements.define(namespace, RivetIconElement)
 </header>
 
   <main id="main-content">
-    <div class="rvt-container-xl rvt-p-top-lg rvt-p-bottom-md">
-      <div class="docs-content">
-        
+    <div class="rvt-container-xl rvt-p-tb-md">
+      
+
+
+
+
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">image</h1>
 
-<h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Icon style samples</h2>
-<div class="rvt-flex rvt-flex-wrap rvt-m-top-sm">
-  <rvt-icon name="image" class="rvt-p-all-sm rvt-box rvt-m-right-sm"></rvt-icon>
-  <rvt-icon name="image" class="rvt-p-all-sm rvt-box rvt-m-right-sm docs-sample-colored"></rvt-icon>
-  <rvt-icon name="image" class="rvt-p-all-sm rvt-box docs-sample-dark"></rvt-icon>
-</div>
-
-<h2 class="rvt-ts-sm rvt-m-top-md rvt-text-bold">Usage</h2>
-
-<pre class="docs-code-block rvt-m-top-sm"><code>&lt;rvt-icon name=&quot;image&quot;&gt;&lt;/rvt-icon&gt;</code></pre>
-<div class="rvt-flex rvt-wrap">
-  <a class="rvt-button rvt-button--secondary rvt-m-top-sm rvt-m-right-sm" download href="../../dist/rvt-icon-image.svg">Download SVG<span class="rvt-sr-only">, image icon</span></a>
+<div class="rvt-button-group rvt-m-top-sm">
+  <a class="rvt-button rvt-button--secondary" download href="../../dist/rvt-icon-image.svg">Download SVG<span class="rvt-sr-only">, image icon</span></a>
   <span class="docs-copy">
-    <button data-copy-button class="rvt-button rvt-button--secondary rvt-m-top-sm">Copy SVG<span class="rvt-sr-only">, image icon</span></button>
+    <button data-copy-button class="rvt-button rvt-button--secondary">Copy SVG<span class="rvt-sr-only">, image icon</span></button>
     <span class="docs-copy__alert" data-copy-alert role="alert"></span>
   </span>
+</div>
+
+<div class="docs-examples">
+  <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 1:</span> Icon</h2>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <rvt-icon name="image"></rvt-icon>
+  </div>
+  <pre class="docs-example__code"><code>&lt;rvt-icon name=&quot;image&quot;&gt;&lt;/rvt-icon&gt;</code></pre>
+</div>
+
+
+  <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 2:</span> Icon button</h2>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <button class="rvt-button rvt-button--plain">
+  <rvt-icon name="image"></rvt-icon>
+  <span class="rvt-sr-only">image</span>
+</button>
+  </div>
+  <pre class="docs-example__code"><code>&lt;button class=&quot;rvt-button rvt-button--plain&quot;&gt;
+  &lt;rvt-icon name=&quot;image&quot;&gt;&lt;/rvt-icon&gt;
+  &lt;span class=&quot;rvt-sr-only&quot;&gt;image&lt;/span&gt;
+&lt;/button&gt;</code></pre>
+</div>
+
+
+  <h2 class="rvt-ts-sm rvt-m-top-md"><span class="rvt-text-bold">Example 3:</span> Icon button with label</h2>
+  
+<div class="docs-example">
+  <div class="docs-example__preview">
+    <button class="rvt-button rvt-button--secondary">
+  <rvt-icon name="image"></rvt-icon>
+  <span class="rvt-p-left-xs">image</span>
+</button>
+  </div>
+  <pre class="docs-example__code"><code>&lt;button class=&quot;rvt-button rvt-button--secondary&quot;&gt;
+  &lt;rvt-icon name=&quot;image&quot;&gt;&lt;/rvt-icon&gt;
+  &lt;span class=&quot;rvt-p-left-xs&quot;&gt;image&lt;/span&gt;
+&lt;/button&gt;</code></pre>
+</div>
+
 </div>
 
 <script>
@@ -251,9 +291,8 @@ if ('clipboard' in navigator) {
 }
 </script>
 
-      </div>
     </div>
-    <div class="docs-nav rvt-border-top rvt-p-tb-md">
+    <div class="docs-nav rvt-p-tb-md">
       <nav class="rvt-container-xl" aria-label="Icons">
   <h2 class="rvt-sr-only">Icons</h2>
   <ul class="docs-nav__list">
