--- a/index.html
+++ b/index.html
@@ -7,27 +7,25 @@
   <title>Rivet Icons</title>
   <link rel="stylesheet" href="https://unpkg.com/rivet-core@2.0.0-alpha.4/css/rivet.min.css">
   <style>:root {
-  --rvt-border: calc(1rem/16) solid var(--rvt-color-black-10);
+  --rvt-border: calc(1rem/16) solid var(--rvt-color-black-20);
   --rvt-color-black: #333333;
   --rvt-color-black-5: #fafafa;
   --rvt-color-black-10: #eeeeee;
+  --rvt-color-black-20: #dddddd;
   --rvt-color-black-90: #444444;
   --rvt-color-blue-60: #006298;
   --rvt-color-white: #ffffff;
 }
 
-.docs-content {
-  max-width: 40rem;
-}
-
 .docs-nav {
   background-color: var(--rvt-color-black-10);
+  border-top: var(--rvt-border);
 }
 
 .docs-nav__list {
   display: grid;
   gap: 0.5rem;
-  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
   list-style: none;
   margin: 0;
   padding: 0;
@@ -57,30 +55,35 @@
   color: var(--rvt-color-blue-60);
 }
 
-.docs-code-block {
-  background-color: var(--rvt-color-black-5);
+.docs-examples {
+  max-width: calc(50rem - calc(2rem/16));
+}
+
+.docs-example {
   border: var(--rvt-border);
   border-radius: 0.25rem;
+  margin-top: 1rem;
+}
+
+.docs-example__preview {
+  display: flex;
+  padding: 1rem;
+}
+
+.docs-example__code {
+  background-color: var(--rvt-color-black-5);
+  border-top: var(--rvt-border);
+  border-radius: 0 0 0.25rem 0.25rem;
   margin: 0;
 }
 
-.docs-code-block > code {
+.docs-example__code > code {
   color: inherit;
   display: block;
   font-family: Consolas,Monaco,"Andale Mono","Ubuntu Mono",monospace;
   font-size: 1rem;
   overflow-x: auto;
   padding: 1rem;
-}
-
-.docs-sample-colored {
-  color: var(--rvt-color-blue-60);
-}
-
-.docs-sample-dark {
-  border-color: var(--rvt-color-black);
-  background-color: var(--rvt-color-black-90);
-  color: var(--rvt-color-white);
 }
 
 .docs-copy {
@@ -95,7 +98,7 @@
   margin-left: 0.5rem;
   padding: 0 0.5rem;
   position: absolute;
-  top: 1.5rem;
+  top: 0.5rem;
   user-select: none;
 }
 </style>
@@ -205,22 +208,20 @@ window.customElements.define(namespace, RivetIconElement)
 </header>
 
   <main id="main-content">
-    <div class="rvt-container-xl rvt-p-top-lg rvt-p-bottom-md">
-      <div class="docs-content">
-        
+    <div class="rvt-container-xl rvt-p-tb-md">
+      
 <h1 class="rvt-ts-xl rvt-text-bold rvt-lh-title">Rivet Icons</h1>
 <p class="rvt-ts-18 rvt-m-top-xs">97 icons crafted for the <a href="https://rivet.iu.edu/" class="rvt-text-nobr">Rivet Design System</a>.</p>
 <p class="rvt-m-bottom-lg"><a class="rvt-button rvt-button--secondary" href="https://github.com/indiana-university/rivet-icons">Get started</a></p>
 
-<h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-md rvt-lh-title">Many usage options</h2>
+<h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-md rvt-lh-title">Format options</h2>
 <p class="rvt-ts-18 rvt-m-bottom-none rvt-m-top-xs">Rivet Icon Element. SVG symbols. Inline SVG.</p>
 
 <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-md rvt-lh-title">Build a custom icon set</h2>
 <p class="rvt-ts-18 rvt-m-bottom-none rvt-m-top-xs">Select only the icons you need and include your own.</p>
 
-      </div>
     </div>
-    <div class="docs-nav rvt-border-top rvt-p-tb-md">
+    <div class="docs-nav rvt-p-tb-md">
       <nav class="rvt-container-xl" aria-label="Icons">
   <h2 class="rvt-sr-only">Icons</h2>
   <ul class="docs-nav__list">
